--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,5 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "python.pythonPath": "/home/kraemer/Programmes/bvps/pyenv/bin/python3.8"
+    "python.testing.pytestEnabled": true
 }
